# KTouch CMakeList.txt for lectures
#

# subdirectories to build
add_subdirectory( Arabic )
add_subdirectory( Bulgarian ) 
add_subdirectory( Catalan ) 
add_subdirectory( Czech )
add_subdirectory( Danish ) 
add_subdirectory( Dutch )
add_subdirectory( English ) 
add_subdirectory( Finnish ) 
add_subdirectory( French )
add_subdirectory( German )
add_subdirectory( Hellenic ) 
add_subdirectory( Hungarian ) 
add_subdirectory( Italian ) 
add_subdirectory( Latin ) 
add_subdirectory( Lithuanian )
add_subdirectory( Norwegian ) 
add_subdirectory( Polish ) 
add_subdirectory( Russian )
add_subdirectory( Slovak )
add_subdirectory( Slovenian )
add_subdirectory( Spanish )
add_subdirectory( Turkish )
add_subdirectory( Ukrainian )