# adding training files
trainingdir = $(kde_datadir)/ktouch
training_DATA = nederlands_junior.ktouch.xml \
catalan.ktouch.xml danish.ktouch.xml danish2.ktouch.xml \
nederlands.ktouch.xml dvorak_ABCD.ktouch.xml dvorak.ktouch.xml \
english.ktouch.xml french.ktouch.xml french2.ktouch.xml \
german.ktouch.xml german2.ktouch.xml german3.ktouch.xml \
german.number.ktouch.xml german.neo.ktouch.xml \
italian.ktouch.xml norwegian.ktouch.xml spanish.ktouch.xml


