# adding training files
trainingdir = $(kde_datadir)/ktouch
training_DATA = \
bulgarian.ktouch.xml \
bulgarian_long.ktouch.xml \
catalan.ktouch.xml \
danish2.ktouch.xml \
danish.ktouch.xml \
dvorak_ABCD.ktouch.xml \
dvorak_es.ktouch.xml \
dvorak-fr-1.ktouch.xml \
dvorak-fr-2.ktouch.xml \
dvorak.ktouch.xml \
english.ktouch.xml \
finnish.ktouch.xml \
finnish_for_kids.ktouch.xml \
french2.ktouch.xml \
french.ktouch.xml \
german2.ktouch.xml \
german3.ktouch.xml \
german.ktouch.xml \
german.neo.ktouch.xml \
german.number.ktouch.xml \
hungarian_expert.ktouch.xml \
hungarian.ktouch.xml \
italian.ktouch.xml \
nederlands_junior.ktouch.xml \
nederlands.ktouch.xml \
norwegian.ktouch.xml \
polish.ktouch.xml \
russian2ktouch.xml \
russian.ktouch.xml \
russian_long.ktouch.xml \
slovenian.ktouch.xml \
spanish.ktouch.xml \
turkish.ktouch.xml